--- a/AspNetCoreWebApplication/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreWebApplication/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
 
     <footer>
         <p class="footer-contents">
-            Designed and developed with
+            Designed and developed
             <a href="https://aws.amazon.com/careers/devtools-jobs/">♥</a> in Seattle.
         </p>
     </footer>
